I aslo updated my CSS Form

--- a/27 index.html
+++ b/27 index.html
@@ -17,7 +17,12 @@
             background-color: teal;
         }
         #search{
+            background-image: url("search.png");
+            background-repeat: no-repeat;
             background-color: white;
+            background-position: 8px 15px;
+            font-size: 1rem;
+            padding: 15px 40px;
             width: 150px;
             transition: width 0.3s ease-in-out;
         }
